<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/devsa_rounded_shape_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_title"
            android:textColor="@color/primary_blue_devsa"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_blue"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/etReportMessage"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:backgroundTint="@color/primary_blue_devsa"
            android:hint="@string/report_hint"
            android:textColor="@color/text_white"
            android:textColorHint="#88FFFFFF"
            android:textSize="14sp"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnReportCancel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/devsa_rounded_shape_dialog"
                android:text="@string/btn_cancel"
                android:textColor="@color/text_white"
                android:textSize="14sp"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/btnReportSend"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:background="@drawable/devsa_rounded_shape"
                android:text="@string/report_btn"
                android:textColor="@color/text_white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
