<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/devsa_rounded_shape_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/update_title"
            android:textColor="@color/primary_blue_devsa"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/divider_blue"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/tvUpdateVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/primary_blue_devsa"
            android:textSize="13sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_message"
            android:textColor="@color/text_white"
            android:textSize="14sp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="28dp"/>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/devsa_rounded_shape"
            android:text="@string/update_btn"
            android:textColor="@color/text_white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingHorizontal="40dp"/>

    </LinearLayout>
</ScrollView>
